--- a/index.html
+++ b/index.html
@@ -2,71 +2,74 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Image Voting Page</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Vote for Your Favorite Image</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
-    body {
-      background-color: #f8f9fa;
-    }
-    .card {
-      transition: transform 0.2s ease;
-    }
-    .card:hover {
-      transform: scale(1.02);
-    }
-    .vote-btn {
-      width: 100%;
-    }
+    body { background-color: #f8f9fa; }
+    .card { transition: transform 0.2s ease; }
+    .card:hover { transform: scale(1.02); }
   </style>
 </head>
 <body>
   <div class="container py-5">
     <h1 class="text-center mb-5">Vote for Your Favorite Image</h1>
-    <div class="row g-4" id="imageGrid">
-      <!-- Image Card Example -->
-      <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <img src="https://via.placeholder.com/400x300?text=Image+1" class="card-img-top" alt="Image 1">
-          <div class="card-body text-center">
-            <h5 class="card-title">Image 1</h5>
-            <p>Votes: <span class="vote-count">0</span></p>
-            <button class="btn btn-primary vote-btn" onclick="vote(this)">Vote</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <img src="https://via.placeholder.com/400x300?text=Image+2" class="card-img-top" alt="Image 2">
-          <div class="card-body text-center">
-            <h5 class="card-title">Image 2</h5>
-            <p>Votes: <span class="vote-count">0</span></p>
-            <button class="btn btn-primary vote-btn" onclick="vote(this)">Vote</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <img src="https://via.placeholder.com/400x300?text=Image+3" class="card-img-top" alt="Image 3">
-          <div class="card-body text-center">
-            <h5 class="card-title">Image 3</h5>
-            <p>Votes: <span class="vote-count">0</span></p>
-            <button class="btn btn-primary vote-btn" onclick="vote(this)">Vote</button>
-          </div>
-        </div>
-      </div>
-      <!-- Add more image cards here if needed -->
-    </div>
+    <div class="row g-4" id="imageGrid"></div>
   </div>
 
   <script>
-    function vote(button) {
-      const cardBody = button.closest('.card-body');
-      const voteCountElem = cardBody.querySelector('.vote-count');
-      let count = parseInt(voteCountElem.textContent);
-      voteCountElem.textContent = count + 1;
+    const imageList = ["Image 1", "Image 2", "Image 3"];
+    const imageGrid = document.getElementById('imageGrid');
+    let userVoted = getCookie("voted");
+
+    // Render image cards
+    fetch('/votes')
+      .then(res => res.json())
+      .then(votes => {
+        imageList.forEach((title, idx) => {
+          const count = votes[idx] || 0;
+          const col = document.createElement('div');
+          col.className = 'col-md-4';
+          col.innerHTML = `
+            <div class="card h-100 shadow-sm">
+              <img src="https://via.placeholder.com/400x300?text=${encodeURIComponent(title)}" class="card-img-top" alt="${title}">
+              <div class="card-body text-center">
+                <h5 class="card-title">${title}</h5>
+                <p>Votes: <span class="vote-count">${count}</span></p>
+                <button class="btn btn-primary vote-btn" data-id="${idx}" ${userVoted ? "disabled" : ""}>Vote</button>
+              </div>
+            </div>
+          `;
+          imageGrid.appendChild(col);
+        });
+
+        document.querySelectorAll('.vote-btn').forEach(btn => {
+          btn.addEventListener('click', () => {
+            if (userVoted) return;
+            const id = btn.dataset.id;
+            fetch('/vote', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({ id: Number(id) })
+            })
+            .then(res => res.json())
+            .then(data => {
+              setCookie("voted", "true", 365);
+              btn.disabled = true;
+              btn.closest(".card-body").querySelector(".vote-count").textContent = data.votes[id];
+              document.querySelectorAll('.vote-btn').forEach(b => b.disabled = true);
+            });
+          });
+        });
+      });
+
+    function setCookie(name, value, days) {
+      const expires = new Date(Date.now() + days * 864e5).toUTCString();
+      document.cookie = name + '=' + encodeURIComponent(value) + '; expires=' + expires + '; path=/';
+    }
+
+    function getCookie(name) {
+      return document.cookie.split('; ').find(row => row.startsWith(name + '='))?.split('=')[1];
     }
   </script>
 </body>
