--- a/index.html
+++ b/index.html
@@ -17,51 +17,63 @@
     <div class="row g-4" id="imageGrid"></div>
   </div>
 
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database-compat.js"></script>
+
   <script>
+    const firebaseConfig = {
+      apiKey: "YOUR_KEY_HERE",
+      authDomain: "your-project.firebaseapp.com",
+      databaseURL: "https://your-project.firebaseio.com",
+      projectId: "your-project-id",
+      storageBucket: "your-project.appspot.com",
+      messagingSenderId: "sender-id",
+      appId: "app-id"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
+
     const imageList = ["Image 1", "Image 2", "Image 3"];
     const imageGrid = document.getElementById('imageGrid');
-    let userVoted = getCookie("voted");
+    const voted = getCookie("voted");
 
-    // Render image cards
-    fetch('/votes')
-      .then(res => res.json())
-      .then(votes => {
-        imageList.forEach((title, idx) => {
-          const count = votes[idx] || 0;
-          const col = document.createElement('div');
-          col.className = 'col-md-4';
-          col.innerHTML = `
-            <div class="card h-100 shadow-sm">
-              <img src="https://via.placeholder.com/400x300?text=${encodeURIComponent(title)}" class="card-img-top" alt="${title}">
-              <div class="card-body text-center">
-                <h5 class="card-title">${title}</h5>
-                <p>Votes: <span class="vote-count">${count}</span></p>
-                <button class="btn btn-primary vote-btn" data-id="${idx}" ${userVoted ? "disabled" : ""}>Vote</button>
-              </div>
+    firebase.database().ref("votes").once("value").then(snapshot => {
+      const votes = snapshot.val() || [0, 0, 0];
+
+      imageList.forEach((title, idx) => {
+        const count = votes[idx] || 0;
+        const col = document.createElement('div');
+        col.className = 'col-md-4';
+        col.innerHTML = `
+          <div class="card h-100 shadow-sm">
+            <img src="https://via.placeholder.com/400x300?text=${encodeURIComponent(title)}" class="card-img-top" alt="${title}">
+            <div class="card-body text-center">
+              <h5 class="card-title">${title}</h5>
+              <p>Votes: <span class="vote-count">${count}</span></p>
+              <button class="btn btn-primary vote-btn" data-id="${idx}" ${voted ? "disabled" : ""}>Vote</button>
             </div>
-          `;
-          imageGrid.appendChild(col);
-        });
+          </div>
+        `;
+        imageGrid.appendChild(col);
+      });
 
-        document.querySelectorAll('.vote-btn').forEach(btn => {
-          btn.addEventListener('click', () => {
-            if (userVoted) return;
-            const id = btn.dataset.id;
-            fetch('/vote', {
-              method: 'POST',
-              headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify({ id: Number(id) })
-            })
-            .then(res => res.json())
-            .then(data => {
-              setCookie("voted", "true", 365);
-              btn.disabled = true;
-              btn.closest(".card-body").querySelector(".vote-count").textContent = data.votes[id];
-              document.querySelectorAll('.vote-btn').forEach(b => b.disabled = true);
-            });
+      document.querySelectorAll('.vote-btn').forEach(btn => {
+        btn.addEventListener('click', () => {
+          if (getCookie("voted")) return;
+          const id = btn.dataset.id;
+
+          const voteRef = db.ref('votes/' + id);
+          voteRef.transaction(current => (current || 0) + 1).then(result => {
+            const newCount = result.snapshot.val();
+            btn.closest(".card-body").querySelector(".vote-count").textContent = newCount;
+            document.querySelectorAll(".vote-btn").forEach(b => b.disabled = true);
+            setCookie("voted", "true", 365);
           });
         });
       });
+    });
 
     function setCookie(name, value, days) {
       const expires = new Date(Date.now() + days * 864e5).toUTCString();
