--- a/index.html
+++ b/index.html
@@ -1,88 +1,261 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Vote for Your Favorite Image</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <style>
-    body { background-color: #f8f9fa; }
-    .card { transition: transform 0.2s ease; }
-    .card:hover { transform: scale(1.02); }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aesthetic Image Voting</title>
+    <style>
+        :root {
+            --background-color: #121212;
+            --card-color: #1e1e1e;
+            --text-color: #e0e0e0;
+            --accent-color: #bb86fc;
+            --border-color: #2c2c2c;
+            --disabled-color: #444;
+        }
+
+        body {
+            background-color: var(--background-color);
+            color: var(--text-color);
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
+
+        .container {
+            width: 100%;
+            max-width: 900px;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2.5em;
+            color: var(--accent-color);
+            margin-bottom: 30px;
+            letter-spacing: 2px;
+            text-shadow: 0 0 10px var(--accent-color);
+        }
+
+        .vote-section {
+            background-color: var(--card-color);
+            border-radius: 15px;
+            padding: 25px;
+            margin-bottom: 30px;
+            border: 1px solid var(--border-color);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+        }
+
+        .image-row {
+            display: flex;
+            justify-content: space-around;
+            gap: 20px;
+            margin-bottom: 25px;
+        }
+
+        .image-container {
+            flex: 1;
+            text-align: center;
+            opacity: 0.8;
+            transition: opacity 0.3s ease, transform 0.3s ease;
+        }
+
+        .image-container:hover {
+            opacity: 1;
+            transform: scale(1.05);
+        }
+
+        img {
+            max-width: 100%;
+            border-radius: 10px;
+            cursor: pointer;
+            border: 2px solid transparent;
+        }
+
+        .image-container.selected img {
+            border-color: var(--accent-color);
+            box-shadow: 0 0 15px var(--accent-color);
+        }
+
+        .vote-button {
+            background-color: var(--accent-color);
+            color: #000;
+            border: none;
+            padding: 12px 25px;
+            font-size: 1.1em;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .vote-button:hover {
+            background-color: #a04ef3;
+            transform: translateY(-2px);
+        }
+
+        .vote-button:disabled {
+            background-color: var(--disabled-color);
+            color: #888;
+            cursor: not-allowed;
+            transform: none;
+        }
+
+        .vote-counts {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 20px;
+            font-size: 1.2em;
+        }
+
+        .vote-counts div {
+            flex: 1;
+        }
+
+        .social-link {
+            margin-top: 40px;
+        }
+
+        .social-link a {
+            color: var(--accent-color);
+            text-decoration: none;
+            font-size: 1.2em;
+            transition: color 0.3s ease;
+        }
+
+        .social-link a:hover {
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
-  <div class="container py-5">
-    <h1 class="text-center mb-5">Vote for Your Favorite Image</h1>
-    <div class="row g-4" id="imageGrid"></div>
-  </div>
 
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database-compat.js"></script>
+    <div class="container">
+        <h1>Cast Your Vote</h1>
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "YOUR_KEY_HERE",
-      authDomain: "your-project.firebaseapp.com",
-      databaseURL: "https://your-project.firebaseio.com",
-      projectId: "your-project-id",
-      storageBucket: "your-project.appspot.com",
-      messagingSenderId: "sender-id",
-      appId: "app-id"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-
-    const imageList = ["Image 1", "Image 2", "Image 3"];
-    const imageGrid = document.getElementById('imageGrid');
-    const voted = getCookie("voted");
-
-    firebase.database().ref("votes").once("value").then(snapshot => {
-      const votes = snapshot.val() || [0, 0, 0];
-
-      imageList.forEach((title, idx) => {
-        const count = votes[idx] || 0;
-        const col = document.createElement('div');
-        col.className = 'col-md-4';
-        col.innerHTML = `
-          <div class="card h-100 shadow-sm">
-            <img src="https://via.placeholder.com/400x300?text=${encodeURIComponent(title)}" class="card-img-top" alt="${title}">
-            <div class="card-body text-center">
-              <h5 class="card-title">${title}</h5>
-              <p>Votes: <span class="vote-count">${count}</span></p>
-              <button class="btn btn-primary vote-btn" data-id="${idx}" ${voted ? "disabled" : ""}>Vote</button>
+        <div class="vote-section" id="vote-section-1">
+            <div class="image-row">
+                <div class="image-container" data-image="1">
+                    <img src="https://via.placeholder.com/250x250/FF6347/FFFFFF?text=Image+1" alt="Image 1">
+                </div>
+                <div class="image-container" data-image="2">
+                    <img src="https://via.placeholder.com/250x250/4682B4/FFFFFF?text=Image+2" alt="Image 2">
+                </div>
+                <div class="image-container" data-image="3">
+                    <img src="https://via.placeholder.com/250x250/32CD32/FFFFFF?text=Image+3" alt="Image 3">
+                </div>
             </div>
-          </div>
-        `;
-        imageGrid.appendChild(col);
-      });
+            <button class="vote-button" id="vote-btn-1" disabled>Vote</button>
+            <div class="vote-counts" id="vote-counts-1">
+                <div>Votes: <span id="votes-1">...</span></div>
+                <div>Votes: <span id="votes-2">...</span></div>
+                <div>Votes: <span id="votes-3">...</span></div>
+            </div>
+        </div>
 
-      document.querySelectorAll('.vote-btn').forEach(btn => {
-        btn.addEventListener('click', () => {
-          if (getCookie("voted")) return;
-          const id = btn.dataset.id;
+        <div class="social-link">
+            <a href="https://your-social-media-link.com" target="_blank">Find Me On...</a>
+        </div>
+    </div>
 
-          const voteRef = db.ref('votes/' + id);
-          voteRef.transaction(current => (current || 0) + 1).then(result => {
-            const newCount = result.snapshot.val();
-            btn.closest(".card-body").querySelector(".vote-count").textContent = newCount;
-            document.querySelectorAll(".vote-btn").forEach(b => b.disabled = true);
-            setCookie("voted", "true", 365);
-          });
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const voteSection = document.getElementById('vote-section-1');
+            const imageContainers = voteSection.querySelectorAll('.image-container');
+            const voteButton = document.getElementById('vote-btn-1');
+            const voteSpans = [
+                document.getElementById('votes-1'),
+                document.getElementById('votes-2'),
+                document.getElementById('votes-3')
+            ];
+
+            const jsonBinApiKey = '$2a$10$YourUniqueApiKeyHere'; // Replace with your actual JSONBin API Key
+            const binId = 'YourBinIdHere'; // Replace with your actual Bin ID
+            const jsonBinUrl = `https://api.jsonbin.io/v3/b/${binId}`;
+
+            let selectedImage = null;
+            let currentVotes = { image1: 0, image2: 0, image3: 0 };
+
+            // Function to fetch the current vote counts
+            async function getVotes() {
+                try {
+                    const response = await fetch(`${jsonBinUrl}/latest`);
+                    if (!response.ok) {
+                        if (response.status === 404) { // If the bin is empty for the first time
+                            return { image1: 0, image2: 0, image3: 0 };
+                        }
+                        throw new Error(`HTTP error! status: ${response.status}`);
+                    }
+                    const data = await response.json();
+                    currentVotes = data.record;
+                    updateVoteDisplay();
+                } catch (error) {
+                    console.error("Error fetching votes:", error);
+                }
+            }
+
+            // Function to update the vote counts
+            async function updateVotes() {
+                try {
+                    const response = await fetch(jsonBinUrl, {
+                        method: 'PUT',
+                        headers: {
+                            'Content-Type': 'application/json',
+                            'X-Master-Key': jsonBinApiKey
+                        },
+                        body: JSON.stringify(currentVotes)
+                    });
+                    if (!response.ok) {
+                        throw new Error(`HTTP error! status: ${response.status}`);
+                    }
+                } catch (error) {
+                    console.error("Error updating votes:", error);
+                }
+            }
+            
+            function updateVoteDisplay() {
+                voteSpans[0].textContent = currentVotes.image1;
+                voteSpans[1].textContent = currentVotes.image2;
+                voteSpans[2].textContent = currentVotes.image3;
+            }
+
+            // Check if the user has already voted
+            if (localStorage.getItem('voted-section-1')) {
+                voteButton.disabled = true;
+                voteButton.textContent = 'Already Voted';
+            }
+
+            imageContainers.forEach(container => {
+                container.addEventListener('click', () => {
+                    if (localStorage.getItem('voted-section-1')) return;
+
+                    imageContainers.forEach(c => c.classList.remove('selected'));
+                    container.classList.add('selected');
+                    selectedImage = container.dataset.image;
+                    voteButton.disabled = false;
+                });
+            });
+
+            voteButton.addEventListener('click', async () => {
+                if (selectedImage && !localStorage.getItem('voted-section-1')) {
+                    currentVotes[`image${selectedImage}`]++;
+                    await updateVotes();
+                    updateVoteDisplay();
+                    
+                    localStorage.setItem('voted-section-1', 'true');
+                    voteButton.disabled = true;
+                    voteButton.textContent = 'Thank You For Voting!';
+                    imageContainers.forEach(c => c.classList.remove('selected'));
+                }
+            });
+
+            // Initial fetch of votes
+            getVotes();
         });
-      });
-    });
+    </script>
 
-    function setCookie(name, value, days) {
-      const expires = new Date(Date.now() + days * 864e5).toUTCString();
-      document.cookie = name + '=' + encodeURIComponent(value) + '; expires=' + expires + '; path=/';
-    }
-
-    function getCookie(name) {
-      return document.cookie.split('; ').find(row => row.startsWith(name + '='))?.split('=')[1];
-    }
-  </script>
 </body>
 </html>
